homarr/values/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
    spec:
      containers:
        - name: homarr
          image: ghcr.io/homarr-labs/homarr:latest
          volumeMounts:
            - name: homarr-data
              mountPath: /appdata
          resources:
            requests:
              cpu: "0.05"
              memory: "100Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
      volumes:
        - name: homarr-data
          persistentVolumeClaim:
            claimName: homarr-pvc
